# dqatool

./: LICENSE  README.md  pyproject.toml
dqatool/: constants.py  imtools.py  logging_config.py  plotting.py  rfi.py  stats.py
examples/: example.ipynb
tests/: test_catalog.py  test_stats.py
tests/data/: sample_catalog.txt
