[tool.poetry]
name        = "dqatool"
version     = "0.1.0"
description = "Data‐Quality Assessment (DQA) tools for radio interferometric data sets"
readme      = "README.md"
license     = "MIT"
authors     = ["Iniyan Natarajan <iniyannatarajan@gmail.com>"]

# include your package directory
packages = [
  { include = "dqatool" }
]

[tool.poetry.dependencies]
python         = "^3.10"
casatasks = "^6.7.0.31"
casatools = "^6.7.0.31"
astropy = "<7.0"
bokeh = "^3.7.2"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
bdsf = "^1.13.0.post2"
astroquery = "^0.4.10"

[tool.poetry.group.dev.dependencies]
pytest    = "^7.0"
black     = "^23.1.0"

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
